Стилизация рейтинга и ссылок footer

--- a/css/style.css
+++ b/css/style.css
@@ -223,3 +223,39 @@ color: #000000;
       height: 593px;
       object-fit: contain;
   }
+
+  .rating {
+  width: 110px;
+  height: 27px;
+  font-size: 14px;
+  text-align: center;
+  color: #666666;
+  background-color: #f2f2f2;
+  }
+
+.visitsedona {
+    width: 136px;
+    height: 16px;
+    font-size: 21px;
+    font-weight: bold;
+    text-align: center;
+    color: #000000;
+  }
+
+  .social-button {
+    background-color: #81b3d2;
+  } 
+
+ .developer-logo {
+    width: 74px;
+    height: 11px;
+    font-size: 14px;
+    text-align: center;
+    color: #000000;
+ }
+
+ .logo-html {
+ width: 115px;
+ height: 41px;
+ object-fit: contain;
+}
