--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
-body {
+* {
     margin: 0;
     padding: 0;
+    box-sizing: inherit;
+}
+
+body {
     color: #333333;
     background-color: #ffffff;
     font-family: "PT Sans", Arial, sans-serif;
@@ -8,6 +12,7 @@ body {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    box-sizing: border-box;
 }
 
 .main-navigation a {
@@ -15,6 +20,7 @@ body {
 }
 
 .main-header {
+    position: relative;
     text-align: center;
 }
 
@@ -51,6 +57,24 @@ body {
     width: 1px;
 }
 
+.main-header-logo {
+    position: absolute;
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, 0);
+}
+
+.site-navigation {
+    display: flex;
+    justify-content: space-around;
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+    
+
+
+}
+
 .site-navigation li {
     display: inline;
 }
@@ -78,10 +102,6 @@ body {
 
 .features {
     text-align: center;
-}
-
-.visually-hidden {
-    text-align: center; 
 }
 
 .features-list {
