--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     color: #333333;
-    background-color: #ffffff;
+    background-color: #f2f2f2;
     font-family: "PT Sans", Arial, sans-serif;
     font-size: 14px;
     width: 1200px;
@@ -35,6 +35,7 @@ body {
 }
 
 .container {
+    background-color: #ffffff;
     width: 1200px;
 }
 
@@ -325,23 +326,46 @@ form {
     font-weight: bold;
     text-align: center;
     color: #000000;
+    text-decoration: none;
+}
+
+.footer__social-list-item {
+    display: inline-block;
 }
 
 .social-button {
+    display: flex;
+    justify-content: center;
     text-decoration: none;
     background-color: #81b3d2;
     list-style: none;
+    width: 48px;
+    height: 46px;
 } 
 
-
-
-.developer-logo {
-    width: 74px;
-    height: 11px;
-    font-size: 14px;
-    text-align: center;
-    color: #000000;
+.social-button-image {
+    align-items: center;
 }
+
+.developer {
+    /* display: flex; */
+}
+
+.developer__text {
+    /* display: inline-block; */
+    font-size:14px;
+    line-height: 26px;
+    color:black;
+    font-family: "PT Sans","Arial", sans-serif;
+    font-weight: 800;
+    /* padding-bottom: 5px; */
+}
+
+.developer__link {
+    /* padding-top: 5px; */
+}
+
+
 
 .logo-html {
     width: 115px;
@@ -350,12 +374,18 @@ form {
 }
 
 .social {
-list-style: none;
+    display: flex;
+    list-style: none;
 }
 
-.main-footer {
+/* .footer__social-list-item {
+} */
+
+.footer {
+    padding: 36px 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    background-color: #ffffff;
 }
 
 .reasons__continued {
@@ -368,7 +398,12 @@ list-style: none;
     color: #333333;
 }
 
-.housing__catalog {
-    flex-direction: row;
+.housing__catalog__item {
+    display: flex;
+    padding: 30px 72px;
+    border-top: 1px solid #f2f2f2;
 }
 
+.housing__catalog__item:last-child {
+    border-bottom: 1px solid #f2f2f2;
+}
