--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
 }
 
 .container {
+    position: relative;
     background-color: #ffffff;
     width: 1200px;
 }
@@ -116,29 +117,26 @@ body {
     display: flex;
 }
 
-.bridge {
-    text-align: center;
-    display: flex; 
-}
-
 .features .features__info {
-    flex: 0 0 20%;
+    width: 400px;
     background-color: #81b3d2;
 }
 
-.bridge .bridge__info {
-    flex: 0 0 20%;
+.features .bridge__info {
+    width: 400px;
     background-color: #81b3d2;
 }
 
 .features .features__image {
     flex: 1;
-    background-image: url(../img/feature-picture.jpg);  
+    background-image: url(../img/feature-picture.jpg);
+    background-size: cover;  
 }
 
-.bridge .bridge__image {
+.features .bridge__image {
     flex: 1;
     background-image: url(../img/layer-5.jpg);
+    background-size: cover;
 }
 
 .features .features__info .features__title {
@@ -146,7 +144,7 @@ body {
     margin-bottom: 36px;
 }
 
-.bridge.bridge__info .bridge__title {
+.features .bridge__info .bridge__title {
     margin-top: 46px;
     margin-bottom: 36px;
 }
@@ -155,7 +153,7 @@ body {
     margin-bottom: 36px;
 }
 
-.bridge .bridge__info .bridge__number {
+.features .bridge__info .bridge__number {
     margin-bottom: 36px;
 }
 
@@ -163,7 +161,7 @@ body {
     margin-bottom: 64px;
 }
 
-.bridge .bridge__info .bridge__text {
+.features .bridge__info .bridge__text {
     margin-bottom: 64px;
 }
 
@@ -256,17 +254,6 @@ body {
     text-align: center;
 }
 
-.modal-search__body {
-    width: 568px;
-    height: 395px; 
-}
-
-form {
-    width: 568px;
-    align-items: center;
-    background-color: #ffffff;
-}
-
 .search-button {
     font-size: 21px;
     width: 568px;
@@ -275,20 +262,37 @@ form {
     color: #ffffff;
     background-color: #766357;
     text-transform: uppercase;
+    border: none;
 }
 
-.modal-search__body {
-    text-align: center;
+.modal-search {
+    position: absolute;
+    bottom: 198px;
+    left: 50%;
+    transform: translate(-50%);
     width: 568px;
-    height: 395px;
-    size: 14px;
-    font-weight: bold;
+    padding: 55px;
+    background-color: #ffffff;
 }
 
-.modal-search__body input {
+.modal-search label {
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.86;
+    letter-spacing: normal;
+    text-align: left;
+}
+
+.modal-search input {
     font: inherit;
     background: #f2f2f2;
     color: #000000;
+    border: none;
+}
+
+.modal-search .form-block {
+    margin-bottom: 29px;
 }
 
 .blue-button  {
@@ -297,13 +301,8 @@ form {
     background-color: #81b3d2;
     font-size: 21px;
     color: #ffffff;
-}
-
-.modal-search__body {
-    background-image: url(../img/map.jpg);
-    width: 1200px;
-    height: 593px;
-    object-fit: contain;
+    text-transform: uppercase;
+    border: none;
 }
 
 .rating {
@@ -410,4 +409,11 @@ form {
 
 .housing__catalog__item:last-child {
     border-bottom: 1px solid #f2f2f2;
+}
+
+.map {
+    background-image: url(../img/map.jpg);
+    width: 1200px;
+    height: 593px;
+    object-fit: contain;
 }
