--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body {
     font-weight: bold;
     font-size: 14px;
     line-height: 26px;
-    color:  #000000; 
+    color:  #000000;
     background-color:#ffffff;
 }
 
@@ -58,12 +58,26 @@ body {
     width: 1200px;
 }
 
+.sedona {
+    padding: 61px 0 56px 0;
+}
+
 .sedona-town {
     font-family: "PT Sans", Arial, sans-serif;
     font-weight: bold;
-    text-align: center;
     font-size: 21px;
     color: #000000;
+    text-transform: uppercase;
+    width: 440px;
+    margin: 0 auto 38px;
+    text-align: center;
+}
+
+.reason {
+    width: 489px;
+    margin: 0 auto;
+    font-size: 14px;
+    text-transform: uppercase;
 }
 
 .reasons {
@@ -87,11 +101,6 @@ body {
 .feature-item__text {
     width: 70%;
     margin: 0 auto;
-}
-
-.cause {
-    text-align: center;
-    color: #333333;
 }
 
 .visually-hidden {
@@ -137,19 +146,13 @@ body {
     background-color: lightgray;
 }
 
-.welcome{
+.welcome {
     padding: 76px;
-    text-align: center; 
-    background-image: url("../img/background.png");
-    object-fit: contain;
-    background-size: cover;
+    text-align: center;
+    background-image: url(../img/intro-mask.svg), url(../img/background.png);
+    background-position: center bottom, left top;
+    background-repeat: no-repeat;
 }
-
-/* .welcome-mask {
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-} */
 
 .features {
     text-align: center;
@@ -169,7 +172,7 @@ body {
 .features .features__image {
     flex: 1;
     background-image: url(../img/feature-picture.jpg);
-    background-size: cover;  
+    background-size: cover;
 }
 
 .features .bridge__image {
@@ -205,8 +208,8 @@ body {
 }
 
 .features-list {
-    list-style: none;  
-    text-align: center;  
+    list-style: none;
+    text-align: center;
 }
 
 .features__title {
@@ -254,7 +257,7 @@ body {
 }
 
 .services h2 {
-    text-align: center; 
+    text-align: center;
     font-family: "PT Sans", Arial, sans-serif;
 }
 
@@ -305,6 +308,272 @@ body {
     background: #81b3d2;
     text-transform: uppercase;
 }
+
+
+.rating {
+    width: 110px;
+    height: 27px;
+    font-size: 14px;
+    text-align: center;
+    color: #666666;
+    background-color: #f2f2f2;
+}
+
+.housing li {
+    list-style: none;
+}
+
+.reasons__continued {
+    display: flex;
+    list-style: none;
+}
+
+.reasons-item-square {
+    color: #333333;
+}
+
+.housing__catalog__item {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 72px;
+    border-top: 1px solid #f2f2f2;
+}
+
+.housing__catalog__item:last-child {
+    border-bottom: 1px solid #f2f2f2;
+}
+
+.housing__catalog__image {
+    margin-right: 30px;
+}
+
+.housing__catalog__info {
+    margin-right: auto;
+}
+
+.housing__catalog__info h2 {
+    margin-bottom: 17px;
+}
+
+.info-block {
+    display: inline-block;
+}
+
+.info-block p {
+    margin-bottom: 18px;
+}
+
+.aligned-to-right {
+    text-align: right;
+}
+
+/* FOOTER */
+
+.footer__social-list {
+    list-style: none;
+}
+
+.footer__social-list-item {
+    display: inline-block;
+}
+
+.social-button {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    background-color: #81b3d2;
+    list-style: none;
+    width: 48px;
+    height: 46px;
+}
+
+.social-button-image {
+    align-items: center;
+}
+
+.developer__text {
+    font-size:14px;
+    line-height: 26px;
+    color:black;
+    font-family: "PT Sans","Arial", sans-serif;
+    font-weight: 800;
+}
+
+.logo-html {
+    width: 115px;
+    height: 41px;
+    object-fit: contain;
+}
+
+.social {
+    display: flex;
+    list-style: none;
+}
+
+.footer {
+    padding: 36px 0;
+    display: flex;
+    justify-content: space-around;
+    background-color: #ffffff;
+}
+
+.map {
+    background-image: url(../img/map.jpg);
+    width: 1200px;
+    height: 593px;
+    object-fit: contain;
+}
+
+/* ////////////////////////////////////////////////////////// */
+
+
+/* FILTER */
+
+body {
+    font-weight: 400;
+    font-family: "PT Sans", Arial, sans-serif;
+
+    background: #2a3e45;
+}
+
+.filter-range {
+    width: 330px;
+    margin: 50px auto;
+
+    color: #ffffff;
+    text-transform: uppercase;
+}
+
+.filter-range-title {
+    margin-bottom: 9px;
+
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 21px;
+}
+
+.price-controls {
+    position: relative;
+
+    height: 36px;
+    margin-bottom: 20px;
+
+    font-size: 0;
+
+    border: 2px solid #ffffff;
+    border-radius: 2px;
+}
+
+.price-controls::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    width: 2px;
+    height: 22px;
+
+    background: #ffffff;
+    transform: translate(-50%, -50%);
+}
+
+.price-controls label {
+    display: inline-block;
+
+    font-size: 14px;
+    line-height: 38px;
+    vertical-align: top;
+
+    cursor: pointer;
+}
+
+.price-controls .min-price,
+.price-controls .max-price {
+    width: 90px;
+    padding-left: 65px;
+}
+
+.price-controls input {
+    width: 50px;
+    margin: 0;
+
+    color: inherit;
+    font: inherit;
+
+    background: none;
+    border: none;
+}
+
+.range-controls {
+    position: relative;
+
+    margin-bottom: 32px;
+}
+
+.range-controls .scale {
+    height: 2px;
+
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.range-controls .bar {
+    width: 80%;
+    height: 2px;
+
+    background: #ffffff;
+}
+
+.range-toggle {
+    position: absolute;
+    top: -9px;
+
+    width: 4px;
+    height: 4px;
+
+    background: #ababab;
+    border: 8px solid #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+    cursor: pointer;
+}
+
+.range-toggle:hover {
+    background: #1c4f80;
+}
+
+.range-toggle-min {
+    left: 0;
+}
+
+.range-toggle-max {
+    left: 80%;
+}
+
+.btn-transparent {
+    display: block;
+    margin: 0 auto;
+    padding: 6px 35px;
+
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    text-transform: uppercase;
+
+    background: transparent;
+    border: 2px solid #ffffff;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.btn-transparent:hover {
+    color: #000000;
+    background: #ffffff;
+}
+
+
+/* //////////////////////////////////////// */
+
+/* SEARCH */
 
 .booking {
     padding: 8px 16px;
@@ -390,271 +659,17 @@ body {
     border: none;
 }
 
-.rating {
-    width: 110px;
-    height: 27px;
+.form-block input {
+    text-transform: uppercase;
     font-size: 14px;
-    text-align: center;
-    color: #666666;
-    background-color: #f2f2f2;
+    font-weight: bold;
 }
 
-.housing li {
-    list-style: none;
-}
-
-.reasons__continued {
-    display: flex;
-    list-style: none;
-}
-
-.reasons-item-square {
-    color: #333333;
-}
-
-.housing__catalog__item {
+.quantity-block {
     display: flex;
     justify-content: space-between;
-    padding: 30px 72px;
-    border-top: 1px solid #f2f2f2;
 }
 
-.housing__catalog__item:last-child {
-    border-bottom: 1px solid #f2f2f2;
+.form-label {
+    width: 112px;
 }
-
-.housing__catalog__image {
-    margin-right: 30px;
-}
-
-.housing__catalog__info {
-    margin-right: auto;
-}
-
-.housing__catalog__info h2 {
-    margin-bottom: 17px;
-}
-
-.info-block {
-    display: inline-block;
-}
-
-.info-block p {
-    margin-bottom: 18px;
-}
-
-.aligned-to-right {
-    text-align: right;
-}
-
-.columns {
-    /* display: flex;
-    flex-direction: column; */
-}
-
-/* FOOTER */
-
-.footer__social-list {
-    list-style: none;
-}
-
-.footer__social-list-item {
-    display: inline-block;
-}
-
-.social-button {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    background-color: #81b3d2;
-    list-style: none;
-    width: 48px;
-    height: 46px;
-} 
-
-.social-button-image {
-    align-items: center;
-}
-
-.developer__text {
-    font-size:14px;
-    line-height: 26px;
-    color:black;
-    font-family: "PT Sans","Arial", sans-serif;
-    font-weight: 800;
-}
-
-.logo-html {
-    width: 115px;
-    height: 41px;
-    object-fit: contain;
-}
-
-.social {
-    display: flex;
-    list-style: none;
-}
-
-.footer {
-    padding: 36px 0;
-    display: flex;
-    justify-content: space-around;
-    background-color: #ffffff;
-}
-
-.map {
-    background-image: url(../img/map.jpg);
-    width: 1200px;
-    height: 593px;
-    object-fit: contain;
-}
-
-/* ////////////////////////////////////////////////////////// */
-
-
-/* FILTER */
-
-body {
-    font-weight: 400;
-    font-family: "PT Sans", Arial, sans-serif;
-  
-    background: #2a3e45; /* для демо */
-  }
-  
-  .filter-range {
-    width: 330px;
-    margin: 50px auto; /* для демо */
-  
-    color: #ffffff;
-    text-transform: uppercase;
-  }
-  
-  .filter-range-title {
-    margin-bottom: 9px;
-  
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 21px;
-  }
-  
-  .price-controls {
-    position: relative;
-    
-    height: 36px;
-    margin-bottom: 20px;
-    
-    font-size: 0;
-  
-    border: 2px solid #ffffff;
-    border-radius: 2px;
-  }
-  
-  .price-controls::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  
-    width: 2px;
-    height: 22px;
-  
-    background: #ffffff;
-    transform: translate(-50%, -50%);
-  }
-  
-  .price-controls label {
-    display: inline-block;
-  
-    font-size: 14px;
-    line-height: 38px;
-    vertical-align: top;
-  
-    cursor: pointer;
-  }
-  
-  .price-controls .min-price,
-  .price-controls .max-price {
-    width: 90px;
-    padding-left: 65px;
-  }
-  
-  .price-controls input {
-    width: 50px;
-    margin: 0;
-  
-    color: inherit;
-    font: inherit;
-  
-    background: none;
-    border: none;
-  }
-  
-  .range-controls {
-    position: relative;
-  
-    margin-bottom: 32px;
-  }
-  
-  .range-controls .scale {
-    height: 2px;
-  
-    background: rgba(255, 255, 255, 0.3);
-  }
-  
-  .range-controls .bar {
-    width: 80%;
-    height: 2px;
-  
-    background: #ffffff;
-  }
-  
-  .range-toggle {
-    position: absolute;
-    top: -9px;
-    
-    width: 4px;
-    height: 4px;
-  
-    background: #ababab;
-    border: 8px solid #ffffff;
-    border-radius: 50%;
-    box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
-    cursor: pointer;
-  }
-  
-  .range-toggle:hover {
-    background: #1c4f80;
-  }
-  
-  .range-toggle-min {
-    left: 0;
-  }
-  
-  .range-toggle-max {
-    left: 80%;
-  }
-  
-  .btn-transparent {
-    display: block;
-    margin: 0 auto;
-    padding: 6px 35px;
-  
-    font-size: 14px;
-    line-height: 20px;
-    color: #ffffff;
-    text-transform: uppercase;
-  
-    background: transparent;
-    border: 2px solid #ffffff;
-    border-radius: 2px;
-    cursor: pointer;
-  }
-  
-  .btn-transparent:hover {
-    color: #000000;
-  
-    background: #ffffff;
-  }
-    
-
-  /* //////////////////////////////////////// */
