--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
     line-height: 26px;
     color:  #000000;
     background-color:#ffffff;
+    height: 100%;
 }
 
 .visitsedona {
@@ -124,12 +125,14 @@ body {
 .site-navigation {
     display: flex;
     justify-content: space-around;
+    height: 100%;
     font-weight: bold;
     font-size: 14px;
     text-transform: uppercase;
 }
 
 .site-navigation li {
+    align-self: center;
     display: inline;
 }
 
@@ -420,10 +423,12 @@ body {
     display: flex;
     justify-content: space-around;
     background-color: #ffffff;
+    opacity: 0.9;
 }
 
 .map {
     background-image: url(../img/map.jpg);
+    margin-bottom: -120px;
     width: 1200px;
     height: 593px;
     object-fit: contain;
